@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=extract_snapshot
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('TREATMENT_DATE' 'CONNECTION_DATE' 'FLUSH_SIZE' 'OUTPUT_FILENAME' 'OUTPUT_DIR')
 CHAIN_REQUIRED=('TREATMENT_DATE')
