@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=snapshot
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('CONNECTION_DATE')
 CHAIN_REQUIRED=()
