@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=report_aged_balance
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('TREATMENT_DATE' 'CONNECTION_DATE' 'TERM1' 'TERM2' 'TERM3' \
                     'TYPE' 'UNIT' 'POSTED' 'OUTPUT_DIR' 'POSSIBLE_DAYS' \
