@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=payment
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('TREATMENT_DATE' 'CONNECTION_DATE' 'PAYMENT_KIND' 'JOURNAL_METHODS')
 CHAIN_REQUIRED=('TREATMENT_DATE' 'PAYMENT_KIND' 'JOURNAL_METHODS')
