@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=payment_fail
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('IN_DIRECTORY' 'ARCHIVE')
 CHAIN_REQUIRED=()
