@@ -2,7 +2,6 @@
 # vim: set ft=sh:
 
 CHAIN_NAME=renew
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('TREATMENT_DATE' 'CONNECTION_DATE' 'WORKING_DAYS' 'CONF_CODE')
 CHAIN_REQUIRED=('TREATMENT_DATE' 'WORKING_DAYS' 'CONF_CODE')
