@@ -1,6 +1,5 @@
 #!/bin/bash
 CHAIN_NAME=underwriting
-CHAIN_FILE=/tmp/$HOSTNAME-$CHAIN_NAME-$(date +'%y-%m-%d@%H:%M:%S')
 
 CHAIN_PARAMETERS=('TREATMENT_DATE' 'CONNECTION_DATE' 'WORKING_DAYS' 'CONF_CODE')
 CHAIN_REQUIRED=('TREATMENT_DATE' 'WORKING_DAYS' 'CONF_CODE')
