@@ -1,3 +1,4 @@
+* FEA#6232 Nettoyage de la sortie du log pour les batches et chaînes
 * FEA#7026 Gel des dépendances et suppression de l'attribut "_config" du modèle de base des batchs
 * OTH#0000 Ajout des méthode clear / has errors sur le gestionnaire d'erreur
 * FEA#7076 Ajout d'un point d'entrée de configuration generale
